--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -572,3 +572,6 @@
     <!-- Enable video pause workaround when enabling/disabling the camera. -->
      <bool name="config_useVideoPauseWorkaround">true</bool>
 </resources>
+
+    <!-- Whether the device supports Smart Pixels -->
+     <bool name="config_supportSmartPixels">true</bool>
