--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -575,3 +575,6 @@
 
     <!-- Whether the device supports Smart Pixels -->
      <bool name="config_supportSmartPixels">true</bool>
+
+    <!-- Pocket Lock -->
+     <bool name="config_pocketModeSupported">true</bool>
